parser.output
Terminals unused in grammar

    GT


State 122 conflicts: 1 shift/reduce
State 130 conflicts: 8 shift/reduce


Grammar

    0 $accept: goal "end of file"

    1 goal: main_class class_declaration_list

    2 expression: expression AND expression
    3           | expression OR expression
    4           | expression LT expression
    5           | expression EQ expression
    6           | expression PLUS expression
    7           | expression MINUS expression
    8           | expression MULT expression
    9           | factor
   10           | expression LBRACKET expression RBRACKET
   11           | expression DOT LENGTH
   12           | expression DOT IDENTIFIER LPAREN expression_list RPAREN
   13           | NEW INT_TYPE LBRACKET expression RBRACKET
   14           | NEW IDENTIFIER LPAREN RPAREN
   15           | NOT expression

   16 factor: INTEGER_LITERAL
   17       | LPAREN expression RPAREN
   18       | IDENTIFIER
   19       | TRUE
   20       | FALSE
   21       | THIS

   22 main_class: PUBLIC CLASS IDENTIFIER LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET IDENTIFIER RPAREN LBRACE statement_list RBRACE RBRACE

   23 statement: LBRACE statement_list RBRACE
   24          | IF LPAREN expression RPAREN statement ELSE statement
   25          | IF LPAREN expression RPAREN statement
   26          | WHILE LPAREN expression RPAREN statement
   27          | PRINTLN LPAREN expression RPAREN SEMICOLON
   28          | IDENTIFIER ASSIGN expression SEMICOLON
   29          | IDENTIFIER LBRACKET expression RBRACKET ASSIGN expression SEMICOLON

   30 statement_list: statement
   31               | statement_list statement

   32 class_declaration_list: ε
   33                       | class_declaration_list class_declaration

   34 class_declaration: CLASS IDENTIFIER LBRACE var_declaration_list method_declaration_list RBRACE
   35                  | CLASS IDENTIFIER EXTENDS IDENTIFIER LBRACE var_declaration_list method_declaration_list RBRACE

   36 type: INT_TYPE LBRACKET RBRACKET
   37     | BOOLEAN
   38     | INT_TYPE
   39     | IDENTIFIER

   40 var_declaration: type IDENTIFIER SEMICOLON

   41 var_declaration_list: ε
   42                     | var_declaration_list var_declaration

   43 method_declaration_list: ε
   44                        | method_declaration_list method_declaration

   45 method_declaration: PUBLIC type IDENTIFIER LPAREN parameter_list RPAREN LBRACE var_declaration_list statement_list RETURN expression SEMICOLON RBRACE

   46 parameter_list: ε
   47               | type IDENTIFIER
   48               | parameter_list COMMA type IDENTIFIER

   49 expression_list: ε
   50                | expression
   51                | expression_list expression


Terminals, with rules where they appear

    "end of file" (0) 0
    error (256)
    PLUS <std::string> (258) 6
    MINUS <std::string> (259) 7
    MULT <std::string> (260) 8
    AND <std::string> (261) 2
    OR <std::string> (262) 3
    LT <std::string> (263) 4
    GT <std::string> (264)
    EQ <std::string> (265) 5
    ASSIGN <std::string> (266) 28 29
    NOT <std::string> (267) 15
    DOT <std::string> (268) 11 12
    LPAREN <std::string> (269) 12 14 17 22 24 25 26 27 45
    RPAREN <std::string> (270) 12 14 17 22 24 25 26 27 45
    LBRACE <std::string> (271) 22 23 34 35 45
    RBRACE <std::string> (272) 22 23 34 35 45
    LBRACKET <std::string> (273) 10 13 22 29 36
    RBRACKET <std::string> (274) 10 13 22 29 36
    SEMICOLON <std::string> (275) 27 28 29 40 45
    COMMA <std::string> (276) 48
    PUBLIC <std::string> (277) 22 45
    CLASS <std::string> (278) 22 34 35
    STATIC <std::string> (279) 22
    VOID <std::string> (280) 22
    MAIN <std::string> (281) 22
    STRING <std::string> (282) 22
    RETURN <std::string> (283) 45
    INT_TYPE <std::string> (284) 13 36 38
    BOOLEAN <std::string> (285) 37
    IF <std::string> (286) 24 25
    ELSE <std::string> (287) 24
    WHILE <std::string> (288) 26
    PRINTLN <std::string> (289) 27
    LENGTH <std::string> (290) 11
    TRUE <std::string> (291) 19
    FALSE <std::string> (292) 20
    THIS <std::string> (293) 21
    NEW <std::string> (294) 13 14
    EXTENDS <std::string> (295) 35
    INTEGER_LITERAL <std::string> (296) 16
    IDENTIFIER <std::string> (297) 12 14 18 22 28 29 34 35 39 40 45 47 48


Nonterminals, with rules where they appear

    $accept (43)
        on left: 0
    goal <Node *> (44)
        on left: 1
        on right: 0
    expression <Node *> (45)
        on left: 2 3 4 5 6 7 8 9 10 11 12 13 14 15
        on right: 2 3 4 5 6 7 8 10 11 12 13 15 17 24 25 26 27 28 29 45 50 51
    factor <Node *> (46)
        on left: 16 17 18 19 20 21
        on right: 9
    main_class <Node *> (47)
        on left: 22
        on right: 1
    statement <Node *> (48)
        on left: 23 24 25 26 27 28 29
        on right: 24 25 26 30 31
    statement_list <Node *> (49)
        on left: 30 31
        on right: 22 23 31 45
    class_declaration_list <Node *> (50)
        on left: 32 33
        on right: 1 33
    class_declaration <Node *> (51)
        on left: 34 35
        on right: 33
    type <Node *> (52)
        on left: 36 37 38 39
        on right: 40 45 47 48
    var_declaration <Node *> (53)
        on left: 40
        on right: 42
    var_declaration_list <Node *> (54)
        on left: 41 42
        on right: 34 35 42 45
    method_declaration_list <Node *> (55)
        on left: 43 44
        on right: 34 35 44
    method_declaration <Node *> (56)
        on left: 45
        on right: 44
    parameter_list <Node *> (57)
        on left: 46 47 48
        on right: 45 48
    expression_list <Node *> (58)
        on left: 49 50 51
        on right: 12 51


State 0

    0 $accept: • goal "end of file"

    PUBLIC  shift, and go to state 1

    goal        go to state 2
    main_class  go to state 3


State 1

   22 main_class: PUBLIC • CLASS IDENTIFIER LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET IDENTIFIER RPAREN LBRACE statement_list RBRACE RBRACE

    CLASS  shift, and go to state 4


State 2

    0 $accept: goal • "end of file"

    "end of file"  shift, and go to state 5


State 3

    1 goal: main_class • class_declaration_list

    $default  reduce using rule 32 (class_declaration_list)

    class_declaration_list  go to state 6


State 4

   22 main_class: PUBLIC CLASS • IDENTIFIER LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET IDENTIFIER RPAREN LBRACE statement_list RBRACE RBRACE

    IDENTIFIER  shift, and go to state 7


State 5

    0 $accept: goal "end of file" •

    $default  accept


State 6

    1 goal: main_class class_declaration_list •
   33 class_declaration_list: class_declaration_list • class_declaration

    CLASS  shift, and go to state 8

    $default  reduce using rule 1 (goal)

    class_declaration  go to state 9


State 7

   22 main_class: PUBLIC CLASS IDENTIFIER • LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET IDENTIFIER RPAREN LBRACE statement_list RBRACE RBRACE

    LBRACE  shift, and go to state 10


State 8

   34 class_declaration: CLASS • IDENTIFIER LBRACE var_declaration_list method_declaration_list RBRACE
   35                  | CLASS • IDENTIFIER EXTENDS IDENTIFIER LBRACE var_declaration_list method_declaration_list RBRACE

    IDENTIFIER  shift, and go to state 11


State 9

   33 class_declaration_list: class_declaration_list class_declaration •

    $default  reduce using rule 33 (class_declaration_list)


State 10

   22 main_class: PUBLIC CLASS IDENTIFIER LBRACE • PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET IDENTIFIER RPAREN LBRACE statement_list RBRACE RBRACE

    PUBLIC  shift, and go to state 12


State 11

   34 class_declaration: CLASS IDENTIFIER • LBRACE var_declaration_list method_declaration_list RBRACE
   35                  | CLASS IDENTIFIER • EXTENDS IDENTIFIER LBRACE var_declaration_list method_declaration_list RBRACE

    LBRACE   shift, and go to state 13
    EXTENDS  shift, and go to state 14


State 12

   22 main_class: PUBLIC CLASS IDENTIFIER LBRACE PUBLIC • STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET IDENTIFIER RPAREN LBRACE statement_list RBRACE RBRACE

    STATIC  shift, and go to state 15


State 13

   34 class_declaration: CLASS IDENTIFIER LBRACE • var_declaration_list method_declaration_list RBRACE

    $default  reduce using rule 41 (var_declaration_list)

    var_declaration_list  go to state 16


State 14

   35 class_declaration: CLASS IDENTIFIER EXTENDS • IDENTIFIER LBRACE var_declaration_list method_declaration_list RBRACE

    IDENTIFIER  shift, and go to state 17


State 15

   22 main_class: PUBLIC CLASS IDENTIFIER LBRACE PUBLIC STATIC • VOID MAIN LPAREN STRING LBRACKET RBRACKET IDENTIFIER RPAREN LBRACE statement_list RBRACE RBRACE

    VOID  shift, and go to state 18


State 16

   34 class_declaration: CLASS IDENTIFIER LBRACE var_declaration_list • method_declaration_list RBRACE
   42 var_declaration_list: var_declaration_list • var_declaration

    INT_TYPE    shift, and go to state 19
    BOOLEAN     shift, and go to state 20
    IDENTIFIER  shift, and go to state 21

    $default  reduce using rule 43 (method_declaration_list)

    type                     go to state 22
    var_declaration          go to state 23
    method_declaration_list  go to state 24


State 17

   35 class_declaration: CLASS IDENTIFIER EXTENDS IDENTIFIER • LBRACE var_declaration_list method_declaration_list RBRACE

    LBRACE  shift, and go to state 25


State 18

   22 main_class: PUBLIC CLASS IDENTIFIER LBRACE PUBLIC STATIC VOID • MAIN LPAREN STRING LBRACKET RBRACKET IDENTIFIER RPAREN LBRACE statement_list RBRACE RBRACE

    MAIN  shift, and go to state 26


State 19

   36 type: INT_TYPE • LBRACKET RBRACKET
   38     | INT_TYPE •

    LBRACKET  shift, and go to state 27

    $default  reduce using rule 38 (type)


State 20

   37 type: BOOLEAN •

    $default  reduce using rule 37 (type)


State 21

   39 type: IDENTIFIER •

    $default  reduce using rule 39 (type)


State 22

   40 var_declaration: type • IDENTIFIER SEMICOLON

    IDENTIFIER  shift, and go to state 28


State 23

   42 var_declaration_list: var_declaration_list var_declaration •

    $default  reduce using rule 42 (var_declaration_list)


State 24

   34 class_declaration: CLASS IDENTIFIER LBRACE var_declaration_list method_declaration_list • RBRACE
   44 method_declaration_list: method_declaration_list • method_declaration

    RBRACE  shift, and go to state 29
    PUBLIC  shift, and go to state 30

    method_declaration  go to state 31


State 25

   35 class_declaration: CLASS IDENTIFIER EXTENDS IDENTIFIER LBRACE • var_declaration_list method_declaration_list RBRACE

    $default  reduce using rule 41 (var_declaration_list)

    var_declaration_list  go to state 32


State 26

   22 main_class: PUBLIC CLASS IDENTIFIER LBRACE PUBLIC STATIC VOID MAIN • LPAREN STRING LBRACKET RBRACKET IDENTIFIER RPAREN LBRACE statement_list RBRACE RBRACE

    LPAREN  shift, and go to state 33


State 27

   36 type: INT_TYPE LBRACKET • RBRACKET

    RBRACKET  shift, and go to state 34


State 28

   40 var_declaration: type IDENTIFIER • SEMICOLON

    SEMICOLON  shift, and go to state 35


State 29

   34 class_declaration: CLASS IDENTIFIER LBRACE var_declaration_list method_declaration_list RBRACE •

    $default  reduce using rule 34 (class_declaration)


State 30

   45 method_declaration: PUBLIC • type IDENTIFIER LPAREN parameter_list RPAREN LBRACE var_declaration_list statement_list RETURN expression SEMICOLON RBRACE

    INT_TYPE    shift, and go to state 19
    BOOLEAN     shift, and go to state 20
    IDENTIFIER  shift, and go to state 21

    type  go to state 36


State 31

   44 method_declaration_list: method_declaration_list method_declaration •

    $default  reduce using rule 44 (method_declaration_list)


State 32

   35 class_declaration: CLASS IDENTIFIER EXTENDS IDENTIFIER LBRACE var_declaration_list • method_declaration_list RBRACE
   42 var_declaration_list: var_declaration_list • var_declaration

    INT_TYPE    shift, and go to state 19
    BOOLEAN     shift, and go to state 20
    IDENTIFIER  shift, and go to state 21

    $default  reduce using rule 43 (method_declaration_list)

    type                     go to state 22
    var_declaration          go to state 23
    method_declaration_list  go to state 37


State 33

   22 main_class: PUBLIC CLASS IDENTIFIER LBRACE PUBLIC STATIC VOID MAIN LPAREN • STRING LBRACKET RBRACKET IDENTIFIER RPAREN LBRACE statement_list RBRACE RBRACE

    STRING  shift, and go to state 38


State 34

   36 type: INT_TYPE LBRACKET RBRACKET •

    $default  reduce using rule 36 (type)


State 35

   40 var_declaration: type IDENTIFIER SEMICOLON •

    $default  reduce using rule 40 (var_declaration)


State 36

   45 method_declaration: PUBLIC type • IDENTIFIER LPAREN parameter_list RPAREN LBRACE var_declaration_list statement_list RETURN expression SEMICOLON RBRACE

    IDENTIFIER  shift, and go to state 39


State 37

   35 class_declaration: CLASS IDENTIFIER EXTENDS IDENTIFIER LBRACE var_declaration_list method_declaration_list • RBRACE
   44 method_declaration_list: method_declaration_list • method_declaration

    RBRACE  shift, and go to state 40
    PUBLIC  shift, and go to state 30

    method_declaration  go to state 31


State 38

   22 main_class: PUBLIC CLASS IDENTIFIER LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING • LBRACKET RBRACKET IDENTIFIER RPAREN LBRACE statement_list RBRACE RBRACE

    LBRACKET  shift, and go to state 41


State 39

   45 method_declaration: PUBLIC type IDENTIFIER • LPAREN parameter_list RPAREN LBRACE var_declaration_list statement_list RETURN expression SEMICOLON RBRACE

    LPAREN  shift, and go to state 42


State 40

   35 class_declaration: CLASS IDENTIFIER EXTENDS IDENTIFIER LBRACE var_declaration_list method_declaration_list RBRACE •

    $default  reduce using rule 35 (class_declaration)


State 41

   22 main_class: PUBLIC CLASS IDENTIFIER LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET • RBRACKET IDENTIFIER RPAREN LBRACE statement_list RBRACE RBRACE

    RBRACKET  shift, and go to state 43


State 42

   45 method_declaration: PUBLIC type IDENTIFIER LPAREN • parameter_list RPAREN LBRACE var_declaration_list statement_list RETURN expression SEMICOLON RBRACE

    INT_TYPE    shift, and go to state 19
    BOOLEAN     shift, and go to state 20
    IDENTIFIER  shift, and go to state 21

    $default  reduce using rule 46 (parameter_list)

    type            go to state 44
    parameter_list  go to state 45


State 43

   22 main_class: PUBLIC CLASS IDENTIFIER LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET • IDENTIFIER RPAREN LBRACE statement_list RBRACE RBRACE

    IDENTIFIER  shift, and go to state 46


State 44

   47 parameter_list: type • IDENTIFIER

    IDENTIFIER  shift, and go to state 47


State 45

   45 method_declaration: PUBLIC type IDENTIFIER LPAREN parameter_list • RPAREN LBRACE var_declaration_list statement_list RETURN expression SEMICOLON RBRACE
   48 parameter_list: parameter_list • COMMA type IDENTIFIER

    RPAREN  shift, and go to state 48
    COMMA   shift, and go to state 49


State 46

   22 main_class: PUBLIC CLASS IDENTIFIER LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET IDENTIFIER • RPAREN LBRACE statement_list RBRACE RBRACE

    RPAREN  shift, and go to state 50


State 47

   47 parameter_list: type IDENTIFIER •

    $default  reduce using rule 47 (parameter_list)


State 48

   45 method_declaration: PUBLIC type IDENTIFIER LPAREN parameter_list RPAREN • LBRACE var_declaration_list statement_list RETURN expression SEMICOLON RBRACE

    LBRACE  shift, and go to state 51


State 49

   48 parameter_list: parameter_list COMMA • type IDENTIFIER

    INT_TYPE    shift, and go to state 19
    BOOLEAN     shift, and go to state 20
    IDENTIFIER  shift, and go to state 21

    type  go to state 52


State 50

   22 main_class: PUBLIC CLASS IDENTIFIER LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET IDENTIFIER RPAREN • LBRACE statement_list RBRACE RBRACE

    LBRACE  shift, and go to state 53


State 51

   45 method_declaration: PUBLIC type IDENTIFIER LPAREN parameter_list RPAREN LBRACE • var_declaration_list statement_list RETURN expression SEMICOLON RBRACE

    $default  reduce using rule 41 (var_declaration_list)

    var_declaration_list  go to state 54


State 52

   48 parameter_list: parameter_list COMMA type • IDENTIFIER

    IDENTIFIER  shift, and go to state 55


State 53

   22 main_class: PUBLIC CLASS IDENTIFIER LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET IDENTIFIER RPAREN LBRACE • statement_list RBRACE RBRACE

    LBRACE      shift, and go to state 56
    IF          shift, and go to state 57
    WHILE       shift, and go to state 58
    PRINTLN     shift, and go to state 59
    IDENTIFIER  shift, and go to state 60

    statement       go to state 61
    statement_list  go to state 62


State 54

   42 var_declaration_list: var_declaration_list • var_declaration
   45 method_declaration: PUBLIC type IDENTIFIER LPAREN parameter_list RPAREN LBRACE var_declaration_list • statement_list RETURN expression SEMICOLON RBRACE

    LBRACE      shift, and go to state 56
    INT_TYPE    shift, and go to state 19
    BOOLEAN     shift, and go to state 20
    IF          shift, and go to state 57
    WHILE       shift, and go to state 58
    PRINTLN     shift, and go to state 59
    IDENTIFIER  shift, and go to state 63

    statement        go to state 61
    statement_list   go to state 64
    type             go to state 22
    var_declaration  go to state 23


State 55

   48 parameter_list: parameter_list COMMA type IDENTIFIER •

    $default  reduce using rule 48 (parameter_list)


State 56

   23 statement: LBRACE • statement_list RBRACE

    LBRACE      shift, and go to state 56
    IF          shift, and go to state 57
    WHILE       shift, and go to state 58
    PRINTLN     shift, and go to state 59
    IDENTIFIER  shift, and go to state 60

    statement       go to state 61
    statement_list  go to state 65


State 57

   24 statement: IF • LPAREN expression RPAREN statement ELSE statement
   25          | IF • LPAREN expression RPAREN statement

    LPAREN  shift, and go to state 66


State 58

   26 statement: WHILE • LPAREN expression RPAREN statement

    LPAREN  shift, and go to state 67


State 59

   27 statement: PRINTLN • LPAREN expression RPAREN SEMICOLON

    LPAREN  shift, and go to state 68


State 60

   28 statement: IDENTIFIER • ASSIGN expression SEMICOLON
   29          | IDENTIFIER • LBRACKET expression RBRACKET ASSIGN expression SEMICOLON

    ASSIGN    shift, and go to state 69
    LBRACKET  shift, and go to state 70


State 61

   30 statement_list: statement •

    $default  reduce using rule 30 (statement_list)


State 62

   22 main_class: PUBLIC CLASS IDENTIFIER LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET IDENTIFIER RPAREN LBRACE statement_list • RBRACE RBRACE
   31 statement_list: statement_list • statement

    LBRACE      shift, and go to state 56
    RBRACE      shift, and go to state 71
    IF          shift, and go to state 57
    WHILE       shift, and go to state 58
    PRINTLN     shift, and go to state 59
    IDENTIFIER  shift, and go to state 60

    statement  go to state 72


State 63

   28 statement: IDENTIFIER • ASSIGN expression SEMICOLON
   29          | IDENTIFIER • LBRACKET expression RBRACKET ASSIGN expression SEMICOLON
   39 type: IDENTIFIER •

    ASSIGN    shift, and go to state 69
    LBRACKET  shift, and go to state 70

    $default  reduce using rule 39 (type)


State 64

   31 statement_list: statement_list • statement
   45 method_declaration: PUBLIC type IDENTIFIER LPAREN parameter_list RPAREN LBRACE var_declaration_list statement_list • RETURN expression SEMICOLON RBRACE

    LBRACE      shift, and go to state 56
    RETURN      shift, and go to state 73
    IF          shift, and go to state 57
    WHILE       shift, and go to state 58
    PRINTLN     shift, and go to state 59
    IDENTIFIER  shift, and go to state 60

    statement  go to state 72


State 65

   23 statement: LBRACE statement_list • RBRACE
   31 statement_list: statement_list • statement

    LBRACE      shift, and go to state 56
    RBRACE      shift, and go to state 74
    IF          shift, and go to state 57
    WHILE       shift, and go to state 58
    PRINTLN     shift, and go to state 59
    IDENTIFIER  shift, and go to state 60

    statement  go to state 72


State 66

   24 statement: IF LPAREN • expression RPAREN statement ELSE statement
   25          | IF LPAREN • expression RPAREN statement
